--- a/play/index.html
+++ b/play/index.html
@@ -7,7 +7,7 @@
       href="https://element-plus.org/images/element-plus-logo-small.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spark Play</title>
+    <title>Fly Play</title>
   </head>
 
   <body>
